feat: Configure Tailwind CSS and integrate GoDaddy API keys
Integrates GoDaddy API keys for domain availability checks and affiliate link generation into environment variables. This allows for proper configuration of external services without hardcoding sensitive credentials.

Includes setup for Tailwind CSS, enabling its use for styling.

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
       gtag('config', 'G-B6KREVWHVT');
     </script>
 
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8050638035807727"
      crossorigin="anonymous"></script>
+
+    <!-- Tailwind CSS for Development/Review Environment -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    
 <script type="importmap">
 {
   "imports": {
