--- a/public/privacy.html
+++ b/public/privacy.html
@@ -47,12 +47,18 @@
 
         <h2 class="text-2xl font-bold mt-8 mb-4 text-blue-200">5. Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, you can contact us at <a href="mailto:info@findaname.live" class="text-blue-400 hover:underline">info@findaname.live</a>.</p>
+
+        <div class="mt-12 text-center">
+            <a href="/" class="inline-block px-8 py-3 bg-blue-600 hover:bg-blue-500 rounded-lg font-semibold transition-colors">
+                &larr; Back to Home
+            </a>
+        </div>
       </div>
     </main>
 
     <footer class="py-6 px-4 mt-12 border-t border-white/10">
         <div class="container mx-auto text-center text-blue-200/60">
-            <p>&copy; {new Date().getFullYear()} FindAName.live. All rights reserved.</p>
+            <p>&copy; 2023 FindAName.live. All rights reserved.</p>
             <div class="mt-2 space-x-4">
                 <a href="/privacy.html" class="hover:text-blue-300 transition-colors">Privacy Policy</a>
                 <span>|</span>
