--- a/public/terms.html
+++ b/public/terms.html
@@ -39,12 +39,18 @@
 
         <h2 class="text-2xl font-bold mt-8 mb-4 text-blue-200">6. Changes to Terms</h2>
         <p class="mb-4">We reserve the right to modify these terms from time to time at our sole discretion. Therefore, you should review this page periodically. Your continued use of the Website or our service after any such change constitutes your acceptance of the new Terms.</p>
+        
+        <div class="mt-12 text-center">
+            <a href="/" class="inline-block px-8 py-3 bg-blue-600 hover:bg-blue-500 rounded-lg font-semibold transition-colors">
+                &larr; Back to Home
+            </a>
+        </div>
       </div>
     </main>
 
     <footer class="py-6 px-4 mt-12 border-t border-white/10">
         <div class="container mx-auto text-center text-blue-200/60">
-            <p>&copy; {new Date().getFullYear()} FindAName.live. All rights reserved.</p>
+            <p>&copy; 2023 FindAName.live. All rights reserved.</p>
             <div class="mt-2 space-x-4">
                 <a href="/privacy.html" class="hover:text-blue-300 transition-colors">Privacy Policy</a>
                 <span>|</span>
