--- a/public/terms.html
+++ b/public/terms.html
@@ -58,7 +58,7 @@
         <nav class="hidden md:flex flex-grow justify-center items-center gap-x-6 lg:gap-x-8">
             <a href="/dns-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">DNS Lookup</a>
             <a href="/whois-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">WHOIS</a>
-            <a href="/website-down-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Is It Down?</a>
+            <a href="/seo-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">SEO Checker</a>
         </nav>
         <div class="w-24 hidden md:block"></div>
       </div>
