--- a/public/dns-lookup.html
+++ b/public/dns-lookup.html
@@ -64,6 +64,7 @@
             <a href="/dns-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">DNS Lookup</a>
             <a href="/whois-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">WHOIS</a>
             <a href="/seo-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">SEO Checker</a>
+            <a href="/domain-value-calculator.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Domain Value</a>
         </nav>
         <div class="w-24 hidden md:block"></div>
       </div>
@@ -133,6 +134,6 @@
     <script>
         document.querySelector('footer p').innerHTML = `&copy; ${new Date().getFullYear()} FindAName.live. All rights reserved.`;
     </script>
-    <script src="/tools.js" defer></script>
+    <script type="module" src="/tools.js" defer></script>
   </body>
 </html>
