--- a/public/seo-checker.html
+++ b/public/seo-checker.html
@@ -75,35 +75,22 @@
         <h1 class="text-4xl font-extrabold mb-2 bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-teal-300">Website SEO Checker</h1>
         <p class="text-lg md:text-xl text-blue-100/80 mb-8">Get a free technical SEO audit for any website.</p>
 
-        <form id="seo-checker-form" class="max-w-xl mx-auto mb-8 space-y-4">
-            <div>
+        <form id="seo-checker-form" class="max-w-xl mx-auto mb-8">
+             <div class="relative">
                 <input
-                type="text"
-                id="seo-url-input"
-                placeholder="Enter a full website URL (e.g., https://google.com)"
-                class="w-full px-5 py-4 text-lg bg-white/10 border border-white/20 rounded-full focus:ring-2 focus:ring-blue-400 focus:outline-none backdrop-blur-sm transition-all duration-300"
-                required
+                    type="text"
+                    id="seo-url-input"
+                    placeholder="Enter a full website URL (e.g., https://google.com)"
+                    class="w-full pl-5 pr-32 py-4 text-lg bg-white/10 border border-white/20 rounded-full focus:ring-2 focus:ring-blue-400 focus:outline-none backdrop-blur-sm transition-all duration-300"
+                    required
                 />
+                <button
+                    type="submit"
+                    class="absolute inset-y-0 right-0 m-1.5 px-6 py-2.5 bg-blue-600 hover:bg-blue-500 rounded-full font-semibold flex items-center justify-center transition-all duration-300"
+                >
+                    Analyze
+                </button>
             </div>
-            <div>
-                <input
-                type="password"
-                id="api-key-input"
-                placeholder="Enter your Google PageSpeed API Key"
-                class="w-full px-5 py-4 text-lg bg-white/10 border border-white/20 rounded-full focus:ring-2 focus:ring-blue-400 focus:outline-none backdrop-blur-sm transition-all duration-300"
-                required
-                />
-                <p class="text-xs text-blue-200/60 mt-2 text-center">
-                    This tool requires a free Google PageSpeed API key to prevent rate-limiting. 
-                    <a href="https://developers.google.com/speed/docs/insights/v5/get-started#key" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline">Get your key here</a>.
-                </p>
-            </div>
-            <button
-                type="submit"
-                class="w-full px-6 py-3 bg-blue-600 hover:bg-blue-500 rounded-full font-semibold flex items-center justify-center transition-all duration-300"
-            >
-                Analyze
-            </button>
         </form>
 
         <div id="results-container" class="text-left bg-white/5 p-6 rounded-lg min-h-[150px]">
