feat: Improve accessibility and add descriptive text
Enhances user experience by adding ARIA labels to input fields and providing informative descriptions for each tool's purpose. This improves screen reader compatibility and helps users understand the functionality of the Domain Name System (DNS) lookup, WHOIS lookup, SEO checker, and domain value calculator.

--- a/public/dns-lookup.html
+++ b/public/dns-lookup.html
@@ -82,6 +82,7 @@
                 placeholder="Enter a domain name (e.g., google.com)"
                 class="w-full pl-5 pr-32 py-4 text-lg bg-white/10 border border-white/20 rounded-full focus:ring-2 focus:ring-blue-400 focus:outline-none backdrop-blur-sm transition-all duration-300"
                 required
+                aria-label="Domain name for DNS lookup"
                 />
                 <button
                 type="submit"
@@ -109,6 +110,12 @@
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
+        </div>
+        
+        <div class="mt-12 text-left space-y-4">
+            <h2 class="text-2xl font-bold text-blue-200">What is a DNS Lookup?</h2>
+            <p>The Domain Name System (DNS) is the phonebook of the internet. When you type a domain like "google.com" into your browser, your computer uses DNS to look up the corresponding IP address (e.g., 172.217.10.142) to connect to the server. Our DNS Lookup tool allows you to query the DNS records for any domain name.</p>
+            <p>This is useful for troubleshooting website issues, verifying DNS configuration changes, and seeing the infrastructure behind a domain. You can check common record types like A (IP address), MX (mail servers), CNAME (aliases), TXT (text records for verification), and more.</p>
         </div>
 
         <div class="mt-12 text-center">
