--- a/public/domain-value-calculator.html
+++ b/public/domain-value-calculator.html
@@ -78,6 +78,7 @@
                     placeholder="Enter a domain name (e.g., example.com)"
                     class="w-full pl-5 pr-40 py-4 text-lg bg-white/10 border border-white/20 rounded-full focus:ring-2 focus:ring-blue-400 focus:outline-none backdrop-blur-sm transition-all duration-300"
                     required
+                    aria-label="Domain name for value estimation"
                 />
                 <button
                     type="submit"
@@ -105,6 +106,18 @@
                     (adsbygoogle = window.adsbygoogle || []).push({});
                 </script>
             </div>
+        </div>
+
+        <div class="mt-12 text-left space-y-4">
+            <h2 class="text-2xl font-bold text-blue-200">How is Domain Value Calculated?</h2>
+            <p>A domain's value is influenced by many factors. Our AI model considers these key attributes to provide a data-driven estimate, but remember that the final sale price can vary based on negotiation and market demand.</p>
+            <ul class="list-disc list-inside ml-4 space-y-2 mt-2">
+                <li><strong>Top-Level Domain (TLD):</strong> Extensions like .com are typically the most valuable, followed by country-specific (ccTLDs) and newer generic TLDs like .io and .ai.</li>
+                <li><strong>Keywords & SEO:</strong> Domains containing high-value, high-traffic keywords are more desirable and easier to rank in search engines.</li>
+                <li><strong>Length & Memorability:</strong> Shorter, catchy, and easy-to-spell domains are more brandable and therefore more valuable.</li>
+                <li><strong>Age & History:</strong> Older domains that have a clean history (no spam) are often seen as more trustworthy by search engines.</li>
+                <li><strong>Commercial Potential:</strong> The most important factor is its potential to be monetized, whether as a brand, an e-commerce store, a blog, or a SaaS product.</li>
+            </ul>
         </div>
 
         <div class="mt-12 text-center">
