--- a/public/privacy.html
+++ b/public/privacy.html
@@ -46,6 +46,13 @@
       }
     }
     </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "tqo76n2ng4");
+    </script>
   </head>
   <body class="bg-gradient-to-br from-[#0a1024] to-[#0d183a] text-white font-sans">
     <header class="py-6 px-4">
