--- a/public/website-down-checker.html
+++ b/public/website-down-checker.html
@@ -71,6 +71,7 @@
             <a href="/dns-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">DNS Lookup</a>
             <a href="/whois-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">WHOIS</a>
             <a href="/website-down-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Is It Down?</a>
+            <a href="/blog/" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
         </nav>
         <div class="w-24 hidden md:block"></div>
       </div>
@@ -112,7 +113,13 @@
                     data-ad-format="auto"
                     data-full-width-responsive="true"></ins>
                 <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    setTimeout(function() {
+                        try {
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        } catch(e) {
+                            console.error('AdSense error:', e);
+                        }
+                    }, 150);
                 </script>
             </div>
         </div>
@@ -134,6 +141,8 @@
           <a href="/terms.html" class="hover:text-blue-300 transition-colors">Terms of Service</a>
           <span>|</span>
           <a href="/contact.html" class="hover:text-blue-300 transition-colors">Contact</a>
+           <span>|</span>
+          <a href="/automation-guide.html" class="hover:text-blue-300 transition-colors">Automation Guide</a>
         </div>
       </div>
     </footer>
