--- a/public/hosting-lookup.html
+++ b/public/hosting-lookup.html
@@ -73,6 +73,7 @@
             <a href="/nameserver-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Nameserver Lookup</a>
             <a href="/hosting-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Hosting Lookup</a>
             <a href="/website-down-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Is It Down?</a>
+            <a href="/blog/" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
         </nav>
         <div class="w-24 hidden md:block"></div>
       </div>
@@ -114,7 +115,13 @@
                     data-ad-format="auto"
                     data-full-width-responsive="true"></ins>
                 <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    setTimeout(function() {
+                        try {
+                            (adsbygoogle = window.adsbygoogle || []).push({});
+                        } catch(e) {
+                            console.error('AdSense error:', e);
+                        }
+                    }, 150);
                 </script>
             </div>
         </div>
@@ -136,6 +143,8 @@
           <a href="/terms.html" class="hover:text-blue-300 transition-colors">Terms of Service</a>
           <span>|</span>
           <a href="/contact.html" class="hover:text-blue-300 transition-colors">Contact</a>
+           <span>|</span>
+          <a href="/automation-guide.html" class="hover:text-blue-300 transition-colors">Automation Guide</a>
         </div>
       </div>
     </footer>
