feat: Update blog link to external site
Changes the internal blog link to an external link pointing to the dedicated blog domain. This ensures users are directed to the correct, officially hosted blog.

--- a/public/automation-guide.html
+++ b/public/automation-guide.html
@@ -80,7 +80,7 @@
             <a href="/whois-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">WHOIS</a>
             <a href="/seo-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">SEO Checker</a>
             <a href="/domain-value-calculator.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Domain Value</a>
-            <a href="/blog/" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
+            <a href="https://blog.findaname.live/" target="_blank" rel="noopener noreferrer" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
         </nav>
         <div class="w-24 hidden md:block"></div>
       </div>
@@ -88,7 +88,7 @@
 
     <main class="container mx-auto px-4 py-8 md:py-12 text-blue-100/80">
       <div class="max-w-3xl mx-auto prose">
-        <a href="/blog/" class="text-blue-400 hover:text-teal-300 font-semibold mb-6 inline-block no-underline">&larr; Back to Blog</a>
+        <a href="https://blog.findaname.live/" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-teal-300 font-semibold mb-6 inline-block no-underline">&larr; Back to Blog</a>
         <h1 class="text-4xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-teal-300">Automating Blog Posts with Make.com</h1>
         <p class="text-lg text-blue-200/70">A guide to generating and publishing content for your static site using AI and automation.</p>
 
@@ -199,7 +199,7 @@ Do not include a main title (H1) in your response, as that will be added in the 
             &lt;a href="/whois-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium"&gt;WHOIS&lt;/a&gt;
             &lt;a href="/seo-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium"&gt;SEO Checker&lt;/a&gt;
             &lt;a href="/domain-value-calculator.html" class="text-blue-200/80 hover:text-white transition-colors font-medium"&gt;Domain Value&lt;/a&gt;
-            &lt;a href="/blog/" class="text-blue-200/80 hover:text-white transition-colors font-medium"&gt;Blog&lt;/a&gt;
+            &lt;a href="https://blog.findaname.live/" target="_blank" rel="noopener noreferrer" class="text-blue-200/80 hover:text-white transition-colors font-medium"&gt;Blog&lt;/a&gt;
         &lt;/nav&gt;
         &lt;div class="w-24 hidden md:block"&gt;&lt;/div&gt;
       &lt;/div&gt;
@@ -208,7 +208,7 @@ Do not include a main title (H1) in your response, as that will be added in the 
     &lt;main class="container mx-auto px-4 py-8 md:py-12 text-blue-100/80"&gt;
       &lt;div class="max-w-3xl mx-auto"&gt;
         &lt;article&gt;
-            &lt;a href="/blog/" class="text-blue-400 hover:text-teal-300 font-semibold mb-6 inline-block"&gt;&larr; Back to Blog&lt;/a&gt;
+            &lt;a href="https://blog.findaname.live/" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:text-teal-300 font-semibold mb-6 inline-block"&gt;&larr; Back to Blog&lt;/a&gt;
             &lt;h1 class="text-4xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-teal-300"&gt;{{1.title}}&lt;/h1&gt;
             &lt;p class="text-lg text-blue-200/70 mb-6"&gt;Published on {{formatDate(now; "MMMM D, YYYY")}} by Alex Chen&lt;/p&gt;
             
