--- a/public/domain-value-calculator.html
+++ b/public/domain-value-calculator.html
@@ -67,7 +67,7 @@
             <a href="/whois-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">WHOIS</a>
             <a href="/seo-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">SEO Checker</a>
             <a href="/domain-value-calculator.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Domain Value</a>
-            <a href="/blog/" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
+            <a href="https://blog.findaname.live/" target="_blank" rel="noopener noreferrer" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
         </nav>
         <div class="w-24 hidden md:block"></div>
       </div>
