--- a/public/nameserver-lookup.html
+++ b/public/nameserver-lookup.html
@@ -73,7 +73,7 @@
             <a href="/nameserver-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Nameserver Lookup</a>
             <a href="/hosting-lookup.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Hosting Lookup</a>
             <a href="/website-down-checker.html" class="text-blue-200/80 hover:text-white transition-colors font-medium">Is It Down?</a>
-            <a href="/blog/" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
+            <a href="https://blog.findaname.live/" target="_blank" rel="noopener noreferrer" class="text-blue-200/80 hover:text-white transition-colors font-medium">Blog</a>
         </nav>
         <div class="w-24 hidden md:block"></div>
       </div>
