--- a/public/contact.html
+++ b/public/contact.html
@@ -93,6 +93,27 @@
                     Chat on WhatsApp
                 </a>
             </div>
+             <div class="bg-white/10 p-6 rounded-lg">
+                <h2 class="text-2xl font-bold text-blue-200 mb-2">Follow Us</h2>
+                <p class="text-lg mb-4">Connect with us on social media for the latest updates.</p>
+                <div class="flex justify-center items-center space-x-6">
+                    <a href="https://www.facebook.com/profile.php?id=61582389547950" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7"><path d="M18,3.5H15A3.5,3.5 0 0,0 11.5,7V9H9V12H11.5V20.5H15.5V12H18L18.5,9H15.5V7A0.5,0.5 0 0,1 16,6.5H18V3.5Z"></path></svg>
+                    </a>
+                    <a href="https://www.instagram.com/findaname2025/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Instagram">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"></path></svg>
+                    </a>
+                    <a href="https://www.linkedin.com/company/find-a-name2025" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="LinkedIn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7"><path d="M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19M18.5,18.5V13.2A3.26,3.26 0 0,0 15.24,9.94C14.39,9.94 13.4,10.43 13,11.1V10.13H10V18.5H13V13.09C13,12.31 13.3,11.6 14.15,11.6C15.24,11.6 15.5,12.4 15.5,13.09V18.5H18.5M6.5,18.5H9.5V10.13H6.5V18.5M8,6.39A1.61,1.61 0 0,0 6.39,8A1.61,1.61 0 0,0 8,9.61A1.61,1.61 0 0,0 9.61,8A1.61,1.61 0 0,0 8,6.39Z"></path></svg>
+                    </a>
+                    <a href="https://ph.pinterest.com/findanameseo/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Pinterest">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7"><path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 9,21.5C9.08,21.14 9.24,20.14 9.36,19.57L9.85,17.48L9.84,17.47C9.83,17.44 9.82,17.4 9.8,17.36C9.74,17.18 9.5,16.3 9.5,15.54C9.5,13.82 10.66,12.55 12.2,12.55C13.56,12.55 14.2,13.43 14.2,14.53C14.2,15.82 13.42,17.3 12.86,18.42C12.44,19.33 13.1,20.24 14.07,20.24C15.93,20.24 17.42,18.23 17.42,15.11C17.42,12.31 15.2,10.22 12.5,10.22C9.4,10.22 7.43,12.63 7.43,15.15C7.43,16.2 7.82,17.11 8.35,17.58C8.42,17.65 8.44,17.75 8.42,17.86L8.23,18.5C8.2,18.61 8.12,18.66 8,18.62C7.05,18.24 6.5,16.81 6.5,15.5C6.5,12.11 8.87,9 12.71,9C16.5,9 19.5,11.59 19.5,15.04C19.5,18.59 17.1,21.5 13.62,21.5C12.75,21.5 11.9,21.2 11.51,20.73L11,22.28C10.9,22.64 10.5,22.95 10.12,22.95C9.97,22.95 9.83,22.93 9.69,22.88C9.37,22.77 9.12,22.47 9.08,22.11C9.05,21.82 9,21.5 9,21.5C9.4,21.73 9.86,21.88 10.36,21.92C11.5,22 12.5,22 13.06,22C16.92,22 20,18.93 20,15C20,10.92 16.42,8 12.5,8A6.5,6.5 0 0,0 6,14.5C6,15.2 6.13,15.78 6.34,16.27L6.03,17.45C5.88,18.06 5.8,18.5 5.8,18.5C5.78,18.71 5.68,18.89 5.5,18.94C5.5,18.94 5.5,18.94 5.5,18.94C4.18,18.42 2.89,17.15 2.37,15.65C1.88,14.23 1.94,12.7 2.45,11.33C4.1,6.5 7.79,3.77 12,2Z"></path></svg>
+                    </a>
+                    <a href="https://www.blogger.com/u/1/blog/posts/7689043304800964058" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Blogger">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-7 h-7"><path d="M13.8,13.2H10.2C9.54,13.2 9,12.66 9,12V10.2C9,9.54 9.54,9 10.2,9H13.8C14.46,9 15,9.54 15,10.2V12C15,12.66 14.46,13.2 13.8,13.2M16.2,16.2H12.6C11.94,16.2 11.4,15.66 11.4,15V14.4H16.2V15C16.2,15.66 15.66,16.2 15,16.2M19.8,4.2H4.2C2.99,4.2 2,5.19 2,6.4V17.6C2,18.81 2.99,19.8 4.2,19.8H19.8C21.01,19.8 22,18.81 22,17.6V6.4C22,5.19 21.01,4.2 19.8,4.2Z" /></svg>
+                    </a>
+                </div>
+            </div>
         </div>
         
         <!-- AdSense Block -->
@@ -127,7 +148,24 @@
 
     <footer class="py-6 px-4 mt-12 border-t border-white/10">
         <div class="container mx-auto text-center text-blue-200/60">
-            <p>&copy; 2023 FindAName.live. All rights reserved.</p>
+            <div class="flex justify-center items-center space-x-6 mb-6">
+                <a href="https://www.facebook.com/profile.php?id=61582389547950" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Facebook">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M18,3.5H15A3.5,3.5 0 0,0 11.5,7V9H9V12H11.5V20.5H15.5V12H18L18.5,9H15.5V7A0.5,0.5 0 0,1 16,6.5H18V3.5Z"></path></svg>
+                </a>
+                <a href="https://www.instagram.com/findaname2025/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Instagram">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z"></path></svg>
+                </a>
+                <a href="https://www.linkedin.com/company/find-a-name2025" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="LinkedIn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3H19M18.5,18.5V13.2A3.26,3.26 0 0,0 15.24,9.94C14.39,9.94 13.4,10.43 13,11.1V10.13H10V18.5H13V13.09C13,12.31 13.3,11.6 14.15,11.6C15.24,11.6 15.5,12.4 15.5,13.09V18.5H18.5M6.5,18.5H9.5V10.13H6.5V18.5M8,6.39A1.61,1.61 0 0,0 6.39,8A1.61,1.61 0 0,0 8,9.61A1.61,1.61 0 0,0 9.61,8A1.61,1.61 0 0,0 8,6.39Z"></path></svg>
+                </a>
+                <a href="https://ph.pinterest.com/findanameseo/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Pinterest">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 9,21.5C9.08,21.14 9.24,20.14 9.36,19.57L9.85,17.48L9.84,17.47C9.83,17.44 9.82,17.4 9.8,17.36C9.74,17.18 9.5,16.3 9.5,15.54C9.5,13.82 10.66,12.55 12.2,12.55C13.56,12.55 14.2,13.43 14.2,14.53C14.2,15.82 13.42,17.3 12.86,18.42C12.44,19.33 13.1,20.24 14.07,20.24C15.93,20.24 17.42,18.23 17.42,15.11C17.42,12.31 15.2,10.22 12.5,10.22C9.4,10.22 7.43,12.63 7.43,15.15C7.43,16.2 7.82,17.11 8.35,17.58C8.42,17.65 8.44,17.75 8.42,17.86L8.23,18.5C8.2,18.61 8.12,18.66 8,18.62C7.05,18.24 6.5,16.81 6.5,15.5C6.5,12.11 8.87,9 12.71,9C16.5,9 19.5,11.59 19.5,15.04C19.5,18.59 17.1,21.5 13.62,21.5C12.75,21.5 11.9,21.2 11.51,20.73L11,22.28C10.9,22.64 10.5,22.95 10.12,22.95C9.97,22.95 9.83,22.93 9.69,22.88C9.37,22.77 9.12,22.47 9.08,22.11C9.05,21.82 9,21.5 9,21.5C9.4,21.73 9.86,21.88 10.36,21.92C11.5,22 12.5,22 13.06,22C16.92,22 20,18.93 20,15C20,10.92 16.42,8 12.5,8A6.5,6.5 0 0,0 6,14.5C6,15.2 6.13,15.78 6.34,16.27L6.03,17.45C5.88,18.06 5.8,18.5 5.8,18.5C5.78,18.71 5.68,18.89 5.5,18.94C5.5,18.94 5.5,18.94 5.5,18.94C4.18,18.42 2.89,17.15 2.37,15.65C1.88,14.23 1.94,12.7 2.45,11.33C4.1,6.5 7.79,3.77 12,2Z"></path></svg>
+                </a>
+                <a href="https://www.blogger.com/u/1/blog/posts/7689043304800964058" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors" aria-label="Blogger">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6"><path d="M13.8,13.2H10.2C9.54,13.2 9,12.66 9,12V10.2C9,9.54 9.54,9 10.2,9H13.8C14.46,9 15,9.54 15,10.2V12C15,12.66 14.46,13.2 13.8,13.2M16.2,16.2H12.6C11.94,16.2 11.4,15.66 11.4,15V14.4H16.2V15C16.2,15.66 15.66,16.2 15,16.2M19.8,4.2H4.2C2.99,4.2 2,5.19 2,6.4V17.6C2,18.81 2.99,19.8 4.2,19.8H19.8C21.01,19.8 22,18.81 22,17.6V6.4C22,5.19 21.01,4.2 19.8,4.2Z" /></svg>
+                </a>
+            </div>
+            <p class="mt-4">&copy; 2023 FindAName.live. All rights reserved.</p>
             <div class="mt-2 space-x-4">
                 <a href="/privacy.html" class="hover:text-blue-300 transition-colors">Privacy Policy</a>
                 <span>|</span>
@@ -140,7 +178,7 @@
         </div>
     </footer>
     <script>
-        document.querySelector('footer p').innerHTML = `&copy; ${new Date().getFullYear()} FindAName.live. All rights reserved.`;
+        document.querySelector('footer p.mt-4').innerHTML = `&copy; ${new Date().getFullYear()} FindAName.live. All rights reserved.`;
     </script>
   </body>
 </html>
