feat: Enhance header with navigation and language selector
Introduces a responsive header component with navigation links for DNS Lookup, WHOIS, SEO Checker, Domain Value, and Blog. Implements a language selection dropdown with international SEO tags for multilingual support. Adds Google AdSense meta tag.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,6 +13,14 @@
     <link rel="canonical" href="https://findaname.live/" />
     <meta name="robots" content="index, follow" />
     
+    <!-- International SEO -->
+    <link rel="alternate" hreflang="x-default" href="https://findaname.live/" />
+    <link rel="alternate" hreflang="en" href="https://findaname.live/" />
+    <link rel="alternate" hreflang="fr" href="https://findaname.live/fr/" />
+    <link rel="alternate" hreflang="de" href="https://findaname.live/de/" />
+    <link rel="alternate" hreflang="ar" href="https://findaname.live/ar/" />
+    <link rel="alternate" hreflang="es" href="https://findaname.live/es/" />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://findaname.live/">
@@ -38,6 +47,7 @@
     </script>
 
     <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-8050638035807727">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8050638035807727"
      crossorigin="anonymous"></script>
 
