--- a/public/automation-guide.html
+++ b/public/automation-guide.html
@@ -14,6 +14,8 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-okaidia.min.css" />
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-8050638035807727">
      <style>
         .prose h2 {
             font-size: 1.875rem;
