--- a/public/domain-value-calculator.html
+++ b/public/domain-value-calculator.html
@@ -107,7 +107,7 @@
             <!-- Language Switcher -->
             <div class="relative">
                 <button id="lang-menu-button" aria-label="Select language" class="p-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-7 w-7 text-white"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-7 w-7 text-white"><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></svg>
                 </button>
                 <div id="lang-menu" class="absolute top-full right-0 mt-2 w-48 bg-white/10 backdrop-blur-lg border border-white/20 rounded-lg shadow-xl py-2 hidden">
                     <a href="#" onclick="return changeLanguage('en');" class="block px-4 py-2 text-sm text-blue-100 hover:bg-white/10">English</a>
@@ -121,7 +121,7 @@
             <!-- Mobile Menu Button -->
             <div class="md:hidden">
                 <button id="mobile-menu-button" aria-label="Toggle menu" class="p-2">
-                    <svg id="menu-open-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-8 w-8 text-white"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+                    <svg id="menu-open-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-8 w-8 text-white"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
                     <svg id="menu-close-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-8 w-8 text-white hidden"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
                 </button>
             </div>
@@ -224,6 +224,17 @@
                 <li><strong>Develop a Strong Brand:</strong> The more recognized your brand becomes, the more valuable your domain will be.</li>
                 <li><strong>Don't Let It Expire:</strong> Domain age is a factor. Keep your registration active to show a long-term history.</li>
             </ul>
+
+            <div class="mt-12 text-left space-y-4 prose">
+                <h2>The Domain Aftermarket: Where to Buy and Sell Domains</h2>
+                <p>Once you know your domain's value, you might consider selling it. The domain aftermarket is a thriving ecosystem of marketplaces where investors and end-users buy and sell domains. If you're looking to sell your domain or acquire one that's already taken, these are the primary places to look:</p>
+                <ul>
+                    <li><strong>Domain Marketplaces:</strong> Platforms like Sedo, Afternic, and Dan.com are the largest marketplaces. They allow you to list your domain for a fixed price or put it up for auction. They handle the transaction and transfer process for a commission.</li>
+                    <li><strong>Domain Registrars:</strong> Many registrars, like GoDaddy Auctions, have their own integrated aftermarket platforms. Listing your domain where it's registered can sometimes simplify the process.</li>
+                    <li><strong>Direct Outreach:</strong> You can also proactively reach out to potential buyers who you think would benefit from owning your domain. This requires more effort but avoids marketplace commissions.</li>
+                </ul>
+                <p>When selling, a professional valuation, a clear asking price, and patience are key to a successful transaction.</p>
+            </div>
         </div>
 
         <div class="mt-12 text-center">
