--- a/public/hosting-lookup.html
+++ b/public/hosting-lookup.html
@@ -171,6 +171,24 @@
             </div>
         </div>
 
+        <div class="mt-12 text-left space-y-8">
+            <div class="space-y-4">
+                <h2 class="text-2xl font-bold text-blue-200">How Do We Find the Host?</h2>
+                <p>This tool works in a two-step process. First, it performs a DNS lookup to find the IP address associated with the domain name you entered. Every website on the internet has a unique IP address that acts as its street address on the web.</p>
+                <p>Once we have the IP address, we query a database to find out which organization or Internet Service Provider (ISP) owns that block of IP addresses. In most cases, this organization is the web hosting company that provides the server space for the website.</p>
+            </div>
+            <div class="space-y-4">
+                <h2 class="text-2xl font-bold text-blue-200">What to Look for in a Web Host</h2>
+                <p>Choosing a web host is a critical decision for your website's performance and reliability. Here are a few key factors to consider:</p>
+                <ul class="list-disc list-inside ml-4 space-y-2">
+                    <li><strong>Performance:</strong> How fast are their servers? Look for hosts that offer SSD storage and have servers located near your target audience.</li>
+                    <li><strong>Uptime Guarantee:</strong> A reliable host should guarantee at least 99.9% uptime, ensuring your site is almost always available to visitors.</li>
+                    <li><strong>Customer Support:</strong> When things go wrong, you need fast and helpful support. Look for hosts with 24/7 support via live chat, phone, or email.</li>
+                    <li><strong>Scalability:</strong> Can the hosting plan grow with your website? A good host allows you to easily upgrade your resources as your traffic increases.</li>
+                </ul>
+            </div>
+        </div>
+
         <div class="mt-12 text-center">
             <a href="/" class="inline-block px-8 py-3 bg-blue-600/50 hover:bg-blue-600/80 rounded-lg font-semibold transition-colors">
                 &larr; Back to Domain Generator
