--- a/public/nameserver-lookup.html
+++ b/public/nameserver-lookup.html
@@ -171,6 +171,23 @@
             </div>
         </div>
 
+        <div class="mt-12 text-left space-y-8">
+            <div class="space-y-4">
+                <h2 class="text-2xl font-bold text-blue-200">What Are Nameservers?</h2>
+                <p>Nameservers are a fundamental part of the Domain Name System (DNS). Think of them as specialized servers that act as a directory for your domain. When you register a domain, it's assigned a set of nameservers (usually two or more for redundancy).</p>
+                <p>These nameservers are responsible for storing all the DNS records for your domain (like A, MX, CNAME records) and telling the rest of the internet where to find your website, your email server, and other services connected to your domain.</p>
+            </div>
+            <div class="space-y-4">
+                <h2 class="text-2xl font-bold text-blue-200">Why Look Up Nameservers?</h2>
+                <p>Checking a domain's nameservers is useful for several reasons:</p>
+                <ul class="list-disc list-inside ml-4 space-y-2">
+                    <li><strong>Verifying a Hosting Migration:</strong> When you move your website to a new host, you'll need to update your nameservers. This tool helps you confirm that the change has been completed and propagated across the internet.</li>
+                    <li><strong>Troubleshooting:</strong> If your website or email is down, checking the nameservers is a good first step to ensure your domain is pointing to the correct location.</li>
+                    <li><strong>Competitive Analysis:</strong> You can see where your competitors are hosting their websites. For example, if you see nameservers like `ns1.cloudflare.com`, you know they are using Cloudflare for their DNS and other services.</li>
+                </ul>
+            </div>
+        </div>
+
         <div class="mt-12 text-center">
             <a href="/" class="inline-block px-8 py-3 bg-blue-600/50 hover:bg-blue-600/80 rounded-lg font-semibold transition-colors">
                 &larr; Back to Domain Generator
