--- a/public/seo-checker.html
+++ b/public/seo-checker.html
@@ -176,6 +176,24 @@
             </ul>
         </div>
 
+        <div class="mt-12 text-left space-y-4">
+            <h2 class="text-2xl font-bold text-blue-200">Actionable Tips to Improve Your Scores</h2>
+            <div class="space-y-4">
+                <div class="bg-white/5 p-4 rounded-lg">
+                    <h3 class="font-bold text-blue-300">Improving Performance</h3>
+                    <p>Optimize images by compressing them and using modern formats like WebP. Reduce the amount of JavaScript that runs on page load. Use a content delivery network (CDN) to serve assets faster to users around the world.</p>
+                </div>
+                <div class="bg-white/5 p-4 rounded-lg">
+                    <h3 class="font-bold text-blue-300">Improving Accessibility</h3>
+                    <p>Ensure all images have descriptive `alt` text. Use sufficient color contrast between text and background. Make sure all interactive elements like buttons and links are clearly labeled for screen readers.</p>
+                </div>
+                <div class="bg-white/5 p-4 rounded-lg">
+                    <h3 class="font-bold text-blue-300">Improving SEO</h3>
+                    <p>Make sure every page has a unique and descriptive `&lt;title&gt;` tag and a compelling meta description. Use header tags (H1, H2, etc.) to structure your content logically. Ensure your links have descriptive anchor text.</p>
+                </div>
+            </div>
+        </div>
+
         <div class="mt-12 text-center">
             <a href="/" class="inline-block px-8 py-3 bg-blue-600/50 hover:bg-blue-600/80 rounded-lg font-semibold transition-colors">
                 &larr; Back to Domain Generator
