--- a/public/website-down-checker.html
+++ b/public/website-down-checker.html
@@ -171,6 +171,24 @@
             </div>
         </div>
 
+        <div class="mt-12 text-left space-y-8">
+            <div class="space-y-4">
+                <h2 class="text-2xl font-bold text-blue-200">How Our Checker Works</h2>
+                <p>When you can't access a website, it's hard to know if the problem is on your end or if the site is truly offline for everyone. Is it your Wi-Fi, your ISP, or the website's server?</p>
+                <p>Our tool solves this by attempting to connect to the website from a geographically independent server. We make a standard HTTP request to the site's homepage and check the response code. If we get a successful response (like a 200 OK), we know the site is up. If we can't connect or get an error code (like 404 Not Found or 500 Server Error), it's likely down for everyone.</p>
+            </div>
+            <div class="space-y-4">
+                <h2 class="text-2xl font-bold text-blue-200">Common Reasons a Website is Down</h2>
+                <ul class="list-disc list-inside ml-4 space-y-2">
+                    <li><strong>Server Issues:</strong> The web hosting server could be overloaded, experiencing hardware failure, or undergoing maintenance.</li>
+                    <li><strong>DNS Problems:</strong> If the Domain Name System records are misconfigured, browsers won't be able to find the correct server for the website.</li>
+                    <li><strong>Expired Domain Name:</strong> If the owner forgets to renew their domain registration, it will stop working.</li>
+                    <li><strong>Coding Errors:</strong> A bug in the website's code (e.g., in a recent update) can cause the entire site to crash.</li>
+                    <li><strong>DDoS Attacks:</strong> A malicious Distributed Denial-of-Service attack can flood a server with traffic, overwhelming it and taking it offline.</li>
+                </ul>
+            </div>
+        </div>
+
         <div class="mt-12 text-center">
             <a href="/" class="inline-block px-8 py-3 bg-blue-600/50 hover:bg-blue-600/80 rounded-lg font-semibold transition-colors">
                 &larr; Back to Domain Generator
