--- a/public/whois-lookup.html
+++ b/public/whois-lookup.html
@@ -178,6 +178,12 @@
             <p>Our tool queries this database to retrieve key details like the domain registrar, creation and expiration dates, the domain's current status, and the nameservers it points to. It's an essential tool for researching domain ownership, checking a domain's age, or finding contact information for a website owner.</p>
         </div>
 
+        <div class="mt-12 text-left space-y-4">
+            <h2 class="text-2xl font-bold text-blue-200">WHOIS Privacy: Protecting Your Personal Information</h2>
+            <p>When you register a domain, your personal contact information (name, address, email, phone number) is added to the public WHOIS database. This can lead to spam, unwanted solicitations, and a loss of privacy.</p>
+            <p><strong>WHOIS Privacy</strong> (sometimes called Domain Privacy or ID Protect) is a service offered by most domain registrars that replaces your personal information in the WHOIS database with the information of a proxy service. This keeps your details private while still complying with ICANN's rules. We highly recommend enabling WHOIS privacy for all your domains unless you have a specific reason to keep your information public.</p>
+        </div>
+
         <div class="mt-12 text-center">
             <a href="/" class="inline-block px-8 py-3 bg-blue-600/50 hover:bg-blue-600/80 rounded-lg font-semibold transition-colors">
                 &larr; Back to Domain Generator
