feat: Add Google AdSense to automation guide
Integrates Google AdSense to the automation guide page to monetize content and potentially display relevant advertisements.

--- a/public/automation-guide.html
+++ b/public/automation-guide.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-okaidia.min.css" />
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-8050638035807727">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8050638035807727"
+     crossorigin="anonymous"></script>
      <style>
         .prose h2 {
             font-size: 1.875rem;
